Updating Team Up Project

--- a/index.html
+++ b/index.html
@@ -305,22 +305,24 @@
             <div class="projects-wrapper">
               <!-- Column 1 -->
               <div id="column1">
-                <!-- Caring Hands -->
+                <!-- Team Up -->
                 <div class="card" id="card-1">
                   <div class="card-content">
                     <div class="image-container">
-                      <img src="Caring_Hands.png" alt="Project Image">
+                      <img src="TeamUp.png" alt="Project Image">
                       <div class="overlay">
-                        <a href="https://github.com/TUSHAR-KHATRI13/Caring-Hands" target="_blank">
+                        <a href="https://github.com/cs-b556-g7" target="_blank">
                           <i class="fas fa-eye"></i>
                         </a>
                       </div>
                     </div>
                     <p>
-                      <a href="" target="_blank">Caring Hands</a>
+                      <a href="" target="_blank">Team Up</a>
                     </p>
                     <div class="info">
-                      <p>A Full Stack Web Platform featuring a chatbot interface to facilitate user bookings for home visits while streamlining the nurse registration process. It enhances operational efficiency by simplifying scheduling and improving the registration experience.</p>
+                      <p>A modern web application built with React, TypeScript, and Vite for managing sports venues and connecting sports enthusiasts.
+
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -347,21 +349,21 @@
                 </div>
       
                 <!-- Paraclone -->
-                <div class="card" id="card-3">
+                <div class="card" id="card-1">
                   <div class="card-content">
                     <div class="image-container">
-                      <img src="Paraclone.png" alt="Project Image">
+                      <img src="Caring_Hands.png" alt="Project Image">
                       <div class="overlay">
-                        <a href="http://github.com/AkashKhatrii/ParaClone" target="_blank">
+                        <a href="https://github.com/TUSHAR-KHATRI13/Caring-Hands" target="_blank">
                           <i class="fas fa-eye"></i>
                         </a>
                       </div>
                     </div>
                     <p>
-                      <a href="http://github.com/AkashKhatrii/ParaClone" target="_blank">Paraclone</a>
+                      <a href="" target="_blank">Caring Hands</a>
                     </p>
                     <div class="info">
-                      <p>A Chrome extension that enhances browsing productivity by enabling users to save and organize data during internet sessions directly within the browser, eliminating the need to copy information to other applications.</p>
+                      <p>A Full Stack Web Platform featuring a chatbot interface to facilitate user bookings for home visits while streamlining the nurse registration process. It enhances operational efficiency by simplifying scheduling and improving the registration experience.</p>
                     </div>
                   </div>
                 </div>
