--- a/index.html
+++ b/index.html
@@ -257,35 +257,32 @@
 
             
             <div class="intern">
-              <h3>Full Stack Developer Intern, <span>Oct 2023 - Nov 2023</span></h3>
-              <span class="position">Bharat Intern</span>
+              <h3>Software Developer Intern, <span>June 2025 - Aug 2025</span></h3>
+              <span class="position">My Ed Master, LLC</span>
               <br>
               <div class="info">
                 <ul>
-                  <li> Spearheaded the development of a content management tool using JavaScript, NodeJS, and ReactJS, resulting in an enhanced
-                    workflow that decreased article approval times</li>
-                    <li>
-                    Facilitated better team collaboration by integrating features that centralized article drafts and edits, improving visibility and
-                    communication among editors.</li>
+                  <li>Collaborated with a team to develop modular health tracking features (BMI, calorie, hydration tools) in React.js, improving component reusability and reducing frontend development time by 30%.</li>
+                  <li>Contributed to database optimization by applying PostgreSQL indexing, reducing dashboard query execution time from 2.3s to 1.4s.</li>
+                  <li>Assisted in adding lightweight caching mechanisms, which decreased repeated API calls and improved overall application responsiveness by 25%.</li>
                 </ul>
+
               </div>
             </div>
             
 
 
             <div class="intern">
-              <h3>Software Developer Intern, <span>Sep 2023 - Oct 2023</span></h3>
-              <span class="position">Prodigy Infotech</span>
+              <h3>Full Stack Developer Intern, <span>Aug 2023 - Dec 2023</span></h3>
+              <span class="position">Bharat Intern</span>
               <br>
               <div class="info">
-                <ul><li>
-                  Executed comprehensive data extraction by implementing advanced web scraping techniques; streamlined collection of essential
-                  product details including names and prices while reducing manual entry time
-                </li>                
-                    <li>
-                       Streamlined Data manipulation by utilizing Pandas and storage solutions by implementing MongoDB for organizing scraped
-                      data, reducing retrieval times while increasing overall efficiency.</li>
-                </ul>
+                <ul>
+                <li>Built a CMS platform using React.js, Node.js, and MongoDB to digitize manual article processes, reducing reliance on emails and manual coordination by 40%.</li>
+                <li>Optimized performance by applying MongoDB indexing and integrating Cloudinary for compressed media storage, reducing article retrieval time by 35%.</li>
+                <li>Enabled real-time collaboration features for editors and journalists using React state management and RESTful APIs, which cut content approval cycles by 30%.</li>
+              </ul>
+
               </div>
             </div>
 
@@ -622,3 +619,4 @@ window.addEventListener('scroll', checkScroll);
     </script>
   </body>
 </html>
+
